--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
             # Create the target directory if it doesn't exist
+            sudo su
             mkdir -p /var/www/main
             # Remove existing files in the target directory
             rm -rf /var/www/main/*
@@ -45,4 +46,6 @@ jobs:
             # Restart your application server (e.g., PM2, systemd, nginx reload)
             # For example, if using PM2:
             # pm2 restart nextjs-app || pm2 start npm --name "nextjs-app" -- start
+            chmod -R 755 /var/www/main
+            chown -R www-data:www-data /var/www/main
             echo "Deployment complete!"
