--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,20 +33,19 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             # Create the target directory if it doesn't exist
-            sudo su
-            mkdir -p /var/www/main
+            sudo mkdir -p /var/www/main
             # Remove existing files in the target directory
-            rm -rf /var/www/main/*
+            sudo rm -rf /var/www/main/*
             # Copy the build output to the target directory
-            cp -r ${{ github.workspace }}/.next /var/www/main/
-            cp -r ${{ github.workspace }}/public /var/www/main/
-            cp ${{ github.workspace }}/package.json /var/www/main/
-            cp ${{ github.workspace }}/next.config.mjs /var/www/main/
+            sudo cp -r ${{ github.workspace }}/.next /var/www/main/
+            sudo cp -r ${{ github.workspace }}/public /var/www/main/
+            sudo cp ${{ github.workspace }}/package.json /var/www/main/
+            sudo cp ${{ github.workspace }}/next.config.mjs /var/www/main/
             # Install dependencies on the server (if needed for production)
             # cd /var/www/main && npm install --production
             # Restart your application server (e.g., PM2, systemd, nginx reload)
             # For example, if using PM2:
             # pm2 restart nextjs-app || pm2 start npm --name "nextjs-app" -- start
-            chmod -R 755 /var/www/main
-            chown -R www-data:www-data /var/www/main
+            sudo chmod -R 755 /var/www/main
+            sudo chown -R www-data:www-data /var/www/main
             echo "Deployment complete!"
