--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm ci
 
       - name: Build static site Next.js application
-        run: npm run build && npm run export
+        run: npm run build
 
       - name: Deploy via SSH
         uses: appleboy/ssh-action@master
