static site scp

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
       - name: Build static site Next.js application
         run: npm run build
 
-      - name: Deploy via SSH
-        uses: appleboy/ssh-action@master
+      - name: Deploy via SCP
+        uses: appleboy/scp-action@v1.0.0
         with:
           host: ${{ secrets.SSH_HOST }}
           username: ${{ secrets.SSH_USERNAME }}
@@ -33,21 +33,15 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           source: "out/*"
           target: "/var/www/main"
+
+      - name: chmod chown
+        uses: appleboy/ssh-action@v1.2.2
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USERNAME }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT }}
           script: |
-            # Create the target directory if it doesn't exist
-            # sudo mkdir -p /var/www/main
-            # Remove existing files in the target directory
-            # sudo rm -rf /var/www/main/*
-            # Copy the build output to the target directory
-            # sudo cp -r ${{ github.workspace }}/.next /var/www/main/
-            # sudo cp -r ${{ github.workspace }}/public /var/www/main/
-            # sudo cp ${{ github.workspace }}/package.json /var/www/main/
-            # sudo cp ${{ github.workspace }}/next.config.mjs /var/www/main/
-            # Install dependencies on the server (if needed for production)
-            # cd /var/www/main && npm install --production
-            # Restart your application server (e.g., PM2, systemd, nginx reload)
-            # For example, if using PM2:
-            # pm2 restart nextjs-app || pm2 start npm --name "nextjs-app" -- start
             sudo chmod -R 755 /var/www/main
             sudo chown -R www-data:www-data /var/www/main
             echo "Deployment complete!"
