--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
           port: ${{ secrets.SSH_PORT }}
           script: |
             sudo rm -rf /var/www/main/*
-            sudo cp -r /home/${{ secrets.SSH_USERNAME }}/temp-site/* /var/www/main/
+            sudo cp -r /home/${{ secrets.SSH_USERNAME }}/temp-site/out/* /var/www/main/
             rm -rf /home/${{ secrets.SSH_USERNAME }}/temp-site
             sudo chmod -R 755 /var/www/main
             sudo chown -R www-data:www-data /var/www/main
